fix white space Tooltip MUI webScreen+MobileScreen

--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -45,13 +45,11 @@
   cursor: pointer;
   padding: 10%;
   background: url("https://i.postimg.cc/wBgRtx0Z/dark-matter.png");
-  margin-bottom: -4.7%;
-  margin-top: -5%;
+  margin-bottom: -5.4%;
+  margin-top: -5.4%;
   color: rgba(255, 255, 255, 0.749);
-  border-right: 5px #50708d inset;
-  border-left: 5px #50708d inset;
-  border-top: 5px #72722b inset;
-  border-bottom: 5px #72722b inset;
+  border-top: 3px #50708d inset;
+  border-bottom: 3px #72722b inset;
 }
 
 .SelectCursor h1 {
